--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 NFT Fans Token is a digital token built on the Polygon Matic blockchain, and it's all about creating a massive NFT advertisement network. Basically, it's like a digital fan club where NFT distributors and holders can collaborate, earn, and revolutionize the way NFT ads are used. It's like a fucking digital Robin Hood, but instead of stealing from the rich, they're redistributing NFT ad revenue.
 
-Now, let's talk numbers. <Br> This token has a total supply of 1,000,000,000,000,000,000,000 tokens (yes, you read that right, a quintillion tokens!) and a contract address of 0x2017Fcaea540d2925430586DC92818035Bfc2F50. <Br>
+Now, let's talk numbers. <Br> This token has a total supply of 1,000,000,000,000,000,000,000 tokens (yes, you read that right, a quintillion tokens!)  <Br>
 
 But what's the fucking point of all this? Well, NFT Fans Token wants to create an ecosystem where NFT ads are dropped to their token holders, and the revenue generated from these ads is shared with the NFT distributors. It's like a blockchain version of a fan club, but instead of trading baseball cards, you're trading NFTs and earning tokens for your troubles.
 
